147 ==> 274660 : Face regognition crashes DK.
148 ==> 274713 : digiKam crashed unexpectedly.
149 ==> 274302 : Search for _two_ keywords with logical "and" fails.
150 ==> 272180 : Camera Device Summary seems to use wrong encoding.
151 ==> 274865 : TIFF files with Exif.Image.Orientation = 1 aren't decoded properly.
152 ==> 268267 : digiKam crashes on picture import : OpenCV and Gphoto2 libraries incompatibility through libdc1394.
153 ==> 248494 : Deleted pictures still shown: Have to rescan collection always.
154 ==> 275660 : Remove tag non-working when using face view.
155 ==> 274940 : digiKam freezes when using "sharpen: refocus" (cpu 100%).
156 ==> 268549 : digiKam crashes everytime i try to start.
157 ==> 272031 : BQM wastes a lot of memory when adding over 3000 files.
158 ==> 275813 : digiKam hangs on startup (splash screen: reading database).
159 ==> 274729 : lighttable: the thumbnail slider does not work at all.
160 ==> 274879 : Low resolution version of photo is displayed and portrait oriented photos are rotated 90 degrees.
161 ==> 262212 : Face recognition doesn't work.
162 ==> 276592 : Crash while browsing through album in enlarged view.
163 ==> 261521 : A creation or a deletion, of a tag, takes a very long time.
164 ==> 276052 : Failed to update the database schema from version 5 to version 6.
165 ==> 265034 : Database corrupted after terminating frozen digiKam.
166 ==> 267190 : digiKam crashes when other applications rename files it is loading.
167 ==> 272332 : Moving a versioned file crashes digikam2.
168 ==> 203196 : Multiple Albums for 1 Folder.
169 ==> 229234 : Thumbnail mismatch for images with same name.
170 ==> 267802 : Database connections not closed on exit.
171 ==> 195006 : National charaters not accepted in database file path.
172 ==> 145743 : Only include displayable files in database.
173 ==> 163763 : digiKam hangs during operation and startup.
174 ==> 276795 : Showfoto crashes when open a pic.
175 ==> 
